# ChangeLog for app-office/kchart
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/kchart/Attic/ChangeLog,v 1.73 2007/03/02 02:47:37 jer Exp $

  02 Mar 2007; Jeroen Roovers <jer@gentoo.org> kchart-1.6.1.ebuild:
  Stable for HPPA.

*kchart-1.6.2 (16 Feb 2007)

  16 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> +kchart-1.6.2.ebuild:
  Bump to 1.6.2 pre-release.

  15 Feb 2007; Bryan Østergaard <kloeri@gentoo.org> kchart-1.6.1.ebuild:
  Stable on Alpha, bug 166246.

  14 Feb 2007; Bryan Østergaard <kloeri@gentoo.org> kchart-1.6.1.ebuild:
  Stable on IA64, bug 166246.

  14 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org> kchart-1.6.1.ebuild:
  Stable on sparc wrt #166246

  13 Feb 2007; Lars Weiler <pylon@gentoo.org> kchart-1.6.1.ebuild:
  Stable on ppc; bug #166246.

  13 Feb 2007; Markus Rothe <corsair@gentoo.org> kchart-1.6.1.ebuild:
  Stable on ppc64; bug #166246

  13 Feb 2007; Marcus D. Hanwell <cryos@gentoo.org> kchart-1.6.1.ebuild:
  Stable on amd64, bug 166246.

  11 Feb 2007; Christian Faulhammer <opfer@gentoo.org> kchart-1.6.1.ebuild:
  stable x86; security bug #166246

  10 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> -kchart-1.6.0.ebuild:
  Remove old version.

  20 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  kchart-1.6.1.ebuild:
  Add kdeenablefinal use flag; bug 135058

  20 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  kchart-1.6.1.ebuild:
  Add kdeenablefinal use flag; bug 135058

*kchart-1.6.1 (01 Dec 2006)

  01 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> +kchart-1.6.1.ebuild:
  Version bump.

  01 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> -kchart-1.4.2.ebuild,
  -kchart-1.5.1.ebuild:
  Remove old versions.

  24 Oct 2006; Simon Stelling <blubb@gentoo.org> kchart-1.5.2.ebuild:
  stable on amd64

  19 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Update to 1.6.0 final.

  19 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> ChangeLog: