@@ -1,0 +1,3 @@
+MD5 386d388094734f9759977c3267098e30 koffice-1.6.3.tar.bz2 56829391
+RMD160 e474ba48fa983fafb61ad58fb79cddda69ec6908 koffice-1.6.3.tar.bz2 56829391
+SHA256 c3975f0a59f50aaa5547f1709b6fad54f746fd06815859b374676b426dce12cb koffice-1.6.3.tar.bz2 56829391
