@@ -1,6 +1,11 @@
 # ChangeLog for app-office/kchart
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/kchart/Attic/ChangeLog,v 1.73 2007/03/02 02:47:37 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/kchart/Attic/ChangeLog,v 1.74 2007/06/08 17:23:58 carlo Exp $
+
+*kchart-1.6.3 (08 Jun 2007)
+
+  08 Jun 2007; Carsten Lohrke <carlo@gentoo.org> +kchart-1.6.3.ebuild:
+  Version bump.
 
   02 Mar 2007; Jeroen Roovers <jer@gentoo.org> kchart-1.6.1.ebuild:
   Stable for HPPA.
